syntax = "proto3";

option go_package = "./;proto";

package proto;

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

service FolderService {
  rpc CreateFolder(Folder) returns(FolderWithID) {}
  rpc GetAllFolders(GetAllFoldersData) returns(Folders) {}
}

message Folder {
  uint32 id = 1;
  uint32 profileId = 2;
  string name = 3;
}

message Folders {
  repeated Folder folders = 1;
}

message FolderWithID {
  Folder folder = 1;
  uint32 id = 2;
}

message FolderBool {
  bool status = 1;
}

message GetAllFoldersData {
  uint32 id = 1;
  int64 limit = 2;
  int64 offset = 3;
}
